--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,8 @@
-/* @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+
+html {
+  scroll-behavior: smooth;
+}
 
 @tailwind base;
 @tailwind components;
